--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -11,5 +11,5 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - names: ha-ha
+      - name: ha-ha
         uses: ./.github/actions/joke-action
